# cobalt

./: .gitignore  Cargo.toml  FEATURE_ASSESSMENT.md  README.md  TODO.md  debug_lexer.rs
.github/workflows/: ci.yml
cobol-ast/: Cargo.toml  README.md
cobol-ast/src/: data.rs  expression.rs  lib.rs  literal.rs  program.rs  span.rs  statement.rs  visitor.rs
cobol-dead-code/: Cargo.toml  README.md
cobol-dead-code/examples/: basic_analysis.rs
cobol-dead-code/src/: analyzer.rs  cfg.rs  lib.rs  main.rs
cobol-dead-code/tests/: integration_tests.rs
cobol-doc-gen/: Cargo.toml
cobol-doc-gen/src/: analyzer.rs  formats.rs  generator.rs  lib.rs  main.rs  models.rs  security.rs  templates.rs
cobol-fmt/: Cargo.toml  README.md
cobol-fmt/examples/: basic_format.rs
cobol-fmt/src/: ast_formatter.rs  config.rs  formatter.rs  lib.rs  main.rs
cobol-fmt/tests/: integration_tests.rs
cobol-lexer/: .gitignore  Cargo.toml  README.md
cobol-lexer/benches/: lexer_bench.rs
cobol-lexer/examples/: basic_tokenize.rs
cobol-lexer/src/: error.rs  fixed.rs  free.rs  lexer.rs  lib.rs  token.rs
cobol-lexer/tests/: integration_tests.rs
cobol-linter/: Cargo.toml  README.md
cobol-linter/src/: lib.rs  main.rs
cobol-migration-analyzer/: Cargo.toml
cobol-migration-analyzer/src/: analysis.rs  assessment.rs  cloud_readiness.rs  effort_estimation.rs  lib.rs  main.rs  microservices.rs  models.rs  recommendations.rs  security.rs
cobol-parser/: Cargo.toml  README.md
cobol-parser/benches/: parser_bench.rs
cobol-parser/examples/: basic_parse.rs
cobol-parser/src/: error.rs  lib.rs  parser.rs
cobol-parser/tests/: integration_tests.rs
cobol-repl/: Cargo.toml  README.md
cobol-repl/src/: main.rs
cobol-visualizer/: Cargo.toml  README.md
cobol-visualizer/src/: main.rs
