[workspace]
members = [
    "cobol-lexer",
    "cobol-ast",
    "cobol-parser",
    "cobol-doc-gen",
    "cobol-migration-analyzer", "cobol-repl", "cobol-linter", "cobol-visualizer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/MarsZDF/cobalt"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
rustyline = "14.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
svg = "0.13"
