[package]
name = "cobol-dead-code"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Dead code detector for COBOL programs"
keywords = ["cobol", "dead-code", "unused-code", "analysis", "development-tools"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
cobol-lexer = { path = "../cobol-lexer" }
cobol-parser = { path = "../cobol-parser" }
cobol-ast = { path = "../cobol-ast" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"

[lib]
name = "cobol_dead_code"
path = "src/lib.rs"

[[bin]]
name = "cobol-dead-code"
path = "src/main.rs"

