[package]
name = "cobol-doc-gen"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/MarsZDF/cobalt"
description = "Documentation generator for COBOL programs - converts COBOL to readable specifications"
keywords = ["cobol", "documentation", "generator", "specs"]
categories = ["parsing", "development-tools"]

[dependencies]
cobol-ast = { path = "../cobol-ast" }
cobol-lexer = { path = "../cobol-lexer" }
cobol-parser = { path = "../cobol-parser" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
handlebars = "5.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "cobol_doc_gen"
path = "src/lib.rs"

[[bin]]
name = "cobol-doc"
path = "src/main.rs"