[package]
name = "cobol-fmt"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Auto-formatter for COBOL source code (like rustfmt or black)"
keywords = ["cobol", "formatter", "formatting", "code-style", "development-tools"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
cobol-lexer = { path = "../cobol-lexer" }
cobol-parser = { path = "../cobol-parser" }
cobol-ast = { path = "../cobol-ast" }
clap = { workspace = true }
anyhow = { workspace = true }

[lib]
name = "cobol_fmt"
path = "src/lib.rs"

[[bin]]
name = "cobol-fmt"
path = "src/main.rs"

